--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </ul>
 </nav>
 <center><!-- alnumel 6duyuru panosu Kodu Baslangici -->
-<style type="tex6t/cs6s">
+<style type="text/css">
 <!--
 a:link {
     color: #000000;
