--- a/player/EMB.html
+++ b/player/EMB.html
@@ -39,7 +39,7 @@
 
       // Setup JWPlayer
       jwplayer("jwplayerDiv").setup({
-          file: https://raw.githubusercontent.com/Cutsiffa/Cutsiffa/main/Spl_1/Ben1.m3u8 || "DEFAULT_M3U8_LINK_IF_NOT_PROVIDED",
+          file: "https://raw.githubusercontent.com/Cutsiffa/Cutsiffa/main/Spl_1/Ben1.m3u8",
           autostart: true,
           stretching: "",
           width: "100%"
