--- a/tv/playerjs/index.html
+++ b/tv/playerjs/index.html
@@ -10,7 +10,7 @@
     }
     var player = new Playerjs({
         id:"player",
-        file:"https://test-streams.mux.dev/x36xhzz/url_2/193039199_mp4_h264_aac_ld_7.m3u8",
+        file:"https://raw.githubusercontent.com/Cutsiffa/Cutsiffa/main/Spl_1/Benextra2.m3u8",
         hlsconfig: {
             p2pConfig
         }
