--- a/tv/playerjs/index.html
+++ b/tv/playerjs/index.html
@@ -10,7 +10,7 @@
     }
     var player = new Playerjs({
         id:"player",
-        file:"https://raw.githubusercontent.com/Cutsiffa/Cutsiffa/main/Spl_1/Benextra2.m3u8",
+        file:"http://ktv.im:8080/kk56712/kk12345/49531",
         hlsconfig: {
             p2pConfig
         }
