--- a/tv/hlsjs.html
+++ b/tv/hlsjs.html
@@ -18,7 +18,7 @@
         // token: YOUR_TOKEN
         // Other p2pConfig options provided by CDNBye
     }
-    var source = 'https://test-streams.mux.dev/x36xhzz/url_2/193039199_mp4_h264_aac_ld_7.m3u8';
+    var source = 'http://ktv.im:8080/kk56712/kk12345/49531';
     var video = document.getElementById('video');
     if(Hls.isSupported()) {
         var hls = new Hls({});
