--- a/tv/hlsjs.html
+++ b/tv/hlsjs.html
@@ -18,7 +18,7 @@
         // token: YOUR_TOKEN
         // Other p2pConfig options provided by CDNBye
     }
-    var source = 'http://ktv.im:8080/kk56712/kk12345/49531';
+    var source = 'https://raw.githubusercontent.com/Cutsiffa/Cutsiffa/main/Spl_1/Benextra2.m3u8';
     var video = document.getElementById('video');
     if(Hls.isSupported()) {
         var hls = new Hls({});
