--- a/tv/playerjs/index.html
+++ b/tv/playerjs/index.html
@@ -10,7 +10,7 @@
     }
     var player = new Playerjs({
         id:"player",
-        file:"http://ktv.im:8080/kk56712/kk12345/49531",
+        file:"https://raw.githubusercontent.com/TRQ2030/repo/refs/heads/master/tv/tariq/test.m3u8",
         hlsconfig: {
             p2pConfig
         }
