--- a/tv/playerjs/index.html
+++ b/tv/playerjs/index.html
@@ -10,7 +10,7 @@
     }
     var player = new Playerjs({
         id:"player",
-        file:"https://raw.githubusercontent.com/TRQ2030/repo/refs/heads/master/tv/tariq/test.m3u8",
+        file:"http://fl2.moveonjoy.com/FOX_Sports_1/index.m3u8",
         hlsconfig: {
             p2pConfig
         }
