--- a/tv/easyplayer/index.html
+++ b/tv/easyplayer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>easyplayer</title>
+    <title>TRQeasyplayer</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta
@@ -26,7 +26,7 @@
         // trackerZone: 'hk',        // if using Hongkong tracker
         // trackerZone: 'us',        // if using USA tracker
         swFile: './sw.js',
-        live: false,        // set to true in live mode
+        live: true,        // set to true in live mode
     })
 
 </script>
