--- a/tv/easyplayer/index.html
+++ b/tv/easyplayer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TRQeasyplayer</title>
+    <title>TRQeasyplayerTRQ</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta
@@ -14,7 +14,7 @@
 <body>
 <easy-player
         video-url="http://fl2.moveonjoy.com/FOX_Sports_1/index.m3u8"
-        live="false"
+        live="true"
         stretch="true"
 ></easy-player>
 </body>
@@ -23,7 +23,7 @@
     // https://github.com/tsingsee/EasyPlayer.js
     var engine = new P2PEngineHls({
         videoElem: '#vjs_video_3_html5_api',
-        // trackerZone: 'hk',        // if using Hongkong tracker
+         trackerZone: 'sa',        // if using Hongkong tracker
         // trackerZone: 'us',        // if using USA tracker
         swFile: './sw.js',
         live: true,        // set to true in live mode
