--- a/tv/easyplayer/index.html
+++ b/tv/easyplayer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TRQeasyplayerTRQ</title>
+    <title>trq</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta
@@ -13,7 +13,7 @@
 </head>
 <body>
 <easy-player
-        video-url="http://fl2.moveonjoy.com/FOX_Sports_1/index.m3u8"
+        video-url="https://fl2.moveonjoy.com/BEIN_SPORTS/mono.m3u8"
         live="true"
         stretch="true"
 ></easy-player>
