--- a/tv/hlsjs.html
+++ b/tv/hlsjs.html
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@swarmcloud/hls/p2p-engine.min.js"></script>
 <video id="video" controls></video>
 <p id="version"></p>
-<h3>download info:</h3>
+<h3>trq:</h3>
 <p id="info"></p>
 <table id="table-body">
     <tbody ></tbody>
@@ -18,7 +18,7 @@
         // token: YOUR_TOKEN
         // Other p2pConfig options provided by CDNBye
     }
-    var source = 'https://raw.githubusercontent.com/TRQ2030/repo/refs/heads/master/tv/tariq/test.m3u8';
+    var source = 'https://fl2.moveonjoy.com/BEIN_SPORTS/mono.m3u8';
     var video = document.getElementById('video');
     if(Hls.isSupported()) {
         var hls = new Hls({});
